--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -8,7 +8,7 @@ COPY src/api /go/src/api
 WORKDIR /go/src/api/
 # docker ** という命令を行うディレクトリを指定
  
-RUN go env -w GO111MODULE=on
+RUN go env -w GO111MODULE = auto
 # $GOPATHの外で開発できるように設定
 
 RUN go get -u github.com/gin-gonic/gin \ 
