Docker-Settings Completed

--- a/docker/api/Dockerfile
+++ b/docker/api/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /go/src/api/
 RUN go env -w GO111MODULE=on \
   && go env -w GOSUMDB=off 
 # $GOPATHの外で開発できるように設定
-# $GOSUMDBをoffにし、golang.orgに辿り着けるように設定
+# $golang.orgに辿り着けるように設定
 
 RUN go get -u github.com/gin-gonic/gin \ 
   && go get github.com/jinzhu/gorm \
