--- a/docker/db/conf.d/mysql.conf
+++ b/docker/db/conf.d/mysql.conf
@@ -1,6 +1,6 @@
 [mysqld]
 character-set-server = utf8mb4 # mysqlサーバー側が使用する文字コード
-explicit-defaults-for-timestamp = 1 # テーブルにTimeStamp型のカラムをもつ場合、推奨
+explicit-defaults-for-timestamp = 1 # テーブルにTimeStamp型のカラムをもつ場合、推奨らしい
 general-log = 1　# 実行したクエリの全ての履歴が記録される（defaultではOFFになっているらしい）
 general-log-file = /var/log/mysql/mysqld.log # ログの出力先
 
