--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,12 @@ services:
 swagger:
     image: swaggerapi/swagger-editor
     environment:
-      #API_URL: ./docker/swagger/swagger-editor.yml
-      SWAGGER_FILE: /data/swagger-editor.yml
+      API_URL: ./docker/swagger/swagger-editor.yml
+      #SWAGGER_FILE: /data/swagger-editor.yml
     ports:
       - "8081:8080"
-    volumes:
-      - ./docker/swagger:/data
+    #volumes:
+      #- ./docker/swagger:/data
     networks:
       - my_network
 
